feat(documentação) documentando controller de documentação
